corrected familiar item name registration,
Signed-off-by: Alexthw46 <77152778+Alexthw46@users.noreply.github.com>