@@ -146,7 +146,7 @@ public class ArsNouveauAPI {
         if(!ritualMap.containsKey(id))
             return null;
         try{
-            return ritualMap.get(id).getClass().newInstance();
+            return ritualMap.get(id).getClass().getDeclaredConstructor().newInstance();
         }catch (Exception e){
             e.printStackTrace();
         }
